--- Auto-Git Commit ---

--- a/Tools/Mac/安装初始化过程.md
+++ b/Tools/Mac/安装初始化过程.md
@@ -85,7 +85,7 @@
   - [2.7. iTerm 2: 终端软件](#27-iterm-2-终端软件)
     - [2.7.1. 设置](#271-设置)
     - [2.7.2. 安装brew](#272-安装brew)
-    - [2.7.3. 安装配置zsh, oh\-my\-zsh](#273-安装配置zsh-oh-my-zsh)
+    - [2.7.3. 安装配置zsh, oh-my-zsh](#273-安装配置zsh-oh-my-zsh)
       - [2.7.3.1. 使用 zsh](#2731-使用-zsh)
       - [2.7.3.2. oh-my-zsh](#2732-oh-my-zsh)
       - [2.7.3.3. 插件](#2733-插件)
@@ -478,7 +478,7 @@ gerryleefocus@gmail.com
 
 "边栏"
 
-![2019-07-23-21-59-46.png](./images/2019-07-23-21-59-46.png)
+![2020-08-16-00-32-28.png](./images/2020-08-16-00-32-28.png)
 
 "高级"
 
@@ -488,7 +488,7 @@ gerryleefocus@gmail.com
 
 在 Finder 窗口顶部工具栏空白处右键，选择「自定工具栏」
 
-![2019-07-23-23-35-26.png](./images/2019-07-23-23-35-26.png)
+![2020-08-16-00-54-54.png](./images/2020-08-16-00-54-54.png)
 
 ### 1.4.3. 显示完整路径
 
@@ -516,7 +516,7 @@ defaults write com.apple.finder _FXShowPosixPathInTitle -bool YES
 
 ## 1.5. 添加ll、la、l等ls别名命令
 
-在\~/.bash\_profile中添加
+在`~/.bash_profile`中添加
 
 ```bash
 alias ll='ls -alF'
@@ -525,6 +525,8 @@ alias la='ls -A'
 
 alias l='ls -CF'
 ```
+
+
 
 然后执行source \~/.bash\_profile
 
@@ -792,13 +794,13 @@ working directory:
 
 ### 2.7.2. 安装brew
 
-首先要通过如下命令安装 brew
+首先要安装 brew
 
-```
-/usr/bin/ruby -e "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install)"
-```
+参照:
 
-### 2.7.3. 安装配置zsh, oh\-my\-zsh
+https://mirrors.tuna.tsinghua.edu.cn/help/homebrew/
+
+### 2.7.3. 安装配置zsh, oh-my-zsh
 
 Mac 终端默认 shell 为 bash。
 
@@ -848,7 +850,7 @@ chsh -s /bin/zsh
 执行从 oh-my-zsh 的 GitHub 下载的安装脚本
 
 ```
-sh -c "$(curl -fsSL https://raw.github.com/robbyrussell/oh-my-zsh/master/tools/install.sh)"
+sh -c "$(wget -O- https://raw.githubusercontent.com/robbyrussell/oh-my-zsh/master/tools/install.sh)"
 ```
 
 #### 2.7.3.3. 插件
