--- Auto-Git Commit ---

--- a/Virtualization/3. KVM/8. kvm-unit-test/2. syscall.md
+++ b/Virtualization/3. KVM/8. kvm-unit-test/2. syscall.md
@@ -1,34 +1,33 @@
 
 ```diff
 diff --git a/x86/syscall.c b/x86/syscall.c
-index 8cef860..e084435 100644
+index 8cef860..ed2eddd 100644
 --- a/x86/syscall.c
 +++ b/x86/syscall.c
-@@ -5,6 +5,13 @@
- #include "msr.h"
- #include "desc.h"
-
-+static u64 current_cycles(void)
-+{
-+       u32 low, high;
-+       asm volatile("rdtsc" : "=a"(low), "=d"(high));
-+       return ((u64)low) | ((u64)high << 32);
-+}
-+
- static void test_syscall_lazy_load(void)
- {
+@@ -10,11 +10,15 @@ static void test_syscall_lazy_load(void)
      extern void syscall_target(void);
-@@ -100,8 +107,12 @@ static void test_syscall_tf(void)
+     u16 cs = read_cs(), ss = read_ss();
+     ulong tmp;
++    uint64_t start, end;
 
- int main(int ac, char **av)
- {
-+    u64 start, end;
-+    start = current_cycles();
-     test_syscall_lazy_load();
-     test_syscall_tf();
-+    end = current_cycles();
+     wrmsr(MSR_EFER, rdmsr(MSR_EFER) | EFER_SCE);
+     wrmsr(MSR_LSTAR, (ulong)syscall_target);
+     wrmsr(MSR_STAR, (uint64_t)cs << 32);
++    start = rdtsc();
+     asm volatile("pushf; syscall; syscall_target: popf" : "=c"(tmp) : : "r11");
++    end = rdtsc();
 +    printf("cost %lu CPU cycles\n", (end - start));
-
-     return report_summary();
- }
+     write_ss(ss);
+     // will crash horribly if broken
+     report(true, "MSR_*STAR eager loading");
 ```
+
+AMD:
+
+cost 78 CPU cycles
+
+Intel:
+
+cost 78 CPU cycles
+
+两个一直, 怀疑`syscall`没有导致`vm-exit`, 检查手册
