--- a/Virtualization/3. KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
+++ b/Virtualization/3. KVM/6. 虚拟机时钟模拟/3. APIC Timer模拟.md
@@ -18,11 +18,13 @@
       - [4.5.2.1. start_sw_period(): 周期性或一次性模式](#4521-start_sw_period-周期性或一次性模式)
       - [4.5.2.2. start_sw_tscdeadline(): tscdeadline模式](#4522-start_sw_tscdeadline-tscdeadline模式)
     - [4.5.3. apic_timer_expired(): apic timer已经到期处理](#453-apic_timer_expired-apic-timer已经到期处理)
-- [5. timer到期的外部中断](#5-timer到期的外部中断)
-  - [5.1. apic_timer_fn(): hrtimer到期的响应函数](#51-apic_timer_fn-hrtimer到期的响应函数)
-- [1.2. trace](#12-trace)
-  - [1.2.1. 使用ftrace](#121-使用ftrace)
-    - [tscdeadline](#tscdeadline)
+- [5. timer到期](#5-timer到期)
+  - [5.1. preemption timer到期](#51-preemption-timer到期)
+  - [5.2. hrtimer到期的外部中断](#52-hrtimer到期的外部中断)
+    - [5.2.1. apic_timer_fn(): hrtimer到期的响应函数](#521-apic_timer_fn-hrtimer到期的响应函数)
+- [6. trace](#6-trace)
+  - [6.1. 使用ftrace](#61-使用ftrace)
+    - [6.1.1. tscdeadline](#611-tscdeadline)
 
 <!-- /code_chunk_output -->
 
@@ -38,9 +40,9 @@
 
 1. 虚拟机设置APIC timer, 主要包括两个, 写TMICT寄存器(用于one-shot/period模式); 写TSCDEADLINE MSR寄存器(用于tscdeadline模式). 从而发生vm-exit, 进入KVM中
 2. 在KVM中, 模拟虚拟机的APIC设置, 先设置这几个寄存器, 然后启用lapic timer定时器(优先使用hv timer`<preemption timer>`, 其次使用hrtimer)作为中断源, 最后进入Guest模式
-3. timer到期会产生中断, 发生vm-exit, 进入KVM中
-* preemption timer导致的vm-exit
-* hrtimer到期会产生外部中断, 导致虚拟机vm-exit
+3. timer到期会发生vm-exit, 进入KVM中
+* preemption timer导致的vm-exit, exit reason就是preemption timer
+* hrtimer到期会产生外部中断, 导致虚拟机vm-exit, 这个exit reason是外部中断?
 4. KVM中调用timer处理函数, 注入中断, 进入guest模式
 5. 虚拟机执行时间中断处理函数, 发送EOI, 导致vm-exit
 6. KVM中模拟EOI行为后, 进入Guest模式
@@ -713,7 +715,7 @@ int kvm_apic_local_deliver(struct kvm_lapic *apic, int lvt_type)
 
 `kvm_apic_local_deliver()`用于传递中断到lapci相应功能单元，`__apic_accept_irq`函数在`中断虚拟化`有分析
 
-# 5. timer到期的外部中断
+# 5. timer到期
 
 步骤三和步骤四
 
@@ -725,8 +727,11 @@ f2485b3e0c6c0aa3a9546babc2fad3739e964ebb
 
 d7a08882a0a4b4e176691331ee3f492996579534
 
+## 5.1. preemption timer到期
 
-## 5.1. apic_timer_fn(): hrtimer到期的响应函数
+## 5.2. hrtimer到期的外部中断
+
+### 5.2.1. apic_timer_fn(): hrtimer到期的响应函数
 
 ```cpp
 // hrtimer到期处理函数
@@ -765,9 +770,9 @@ static enum hrtimer_restart apic_timer_fn(struct hrtimer *data)
 
 
 
-# 1.2. trace
+# 6. trace
 
-## 1.2.1. 使用ftrace
+## 6.1. 使用ftrace
 
 ```
 cd /sys/kernel/debug/tracing/
@@ -789,7 +794,7 @@ echo pvclock_gtod_notify > set_ftrace_notrace
 
 使用 `kvm-unit-test` 的vmexit中的`tscdeadline`和`tscdeadline_immed`, 当然也可以自己编写`kvm-unit-test`测试
 
-### tscdeadline
+### 6.1.1. tscdeadline
 
 ```
 # taskset -c 65 ./x86-run x86/vmexit.flat
