--- Auto-Git Commit ---

--- a/Linux/Debug/debug/tools/trace/Ftrace/Ftrace实现原理与开发实践/介绍与实践.md
+++ b/Linux/Debug/debug/tools/trace/Ftrace/Ftrace实现原理与开发实践/介绍与实践.md
@@ -570,3 +570,6 @@ https://www.cnblogs.com/jefree/p/4439013.html 没有摘抄完
 * [Oprofile](http://oprofile.sourceforge.net/doc/internals/index.html)
 * [LTTng](http://lttng.org/docs/) 
 * [Oscilloscope](http://tinylab.org/oscilloscope-realtime-rendering-software-oscilloscope-data-streams/)
+
+
+https://blog.csdn.net/pwl999/article/details/80627095 (none)
