--- Auto-Git Commit ---

--- a/Virtualization/3. KVM/6. 虚拟机时钟模拟/4. APIC Timer模拟.md
+++ b/Virtualization/3. KVM/6. 虚拟机时钟模拟/4. APIC Timer模拟.md
@@ -729,6 +729,8 @@ d7a08882a0a4b4e176691331ee3f492996579534
 
 ## 5.1. preemption timer到期
 
+在`vm-entry`之前, 会调用`vmx_update_hv_timer(vcpu);`
+
 ## 5.2. hrtimer到期的外部中断
 
 ### 5.2.1. apic_timer_fn(): hrtimer到期的响应函数
