--- Auto-Git Commit ---

--- a/Virtualization/3. KVM/6. 虚拟机时钟模拟/4. APIC Timer模拟.md
+++ b/Virtualization/3. KVM/6. 虚拟机时钟模拟/4. APIC Timer模拟.md
@@ -727,9 +727,12 @@ f2485b3e0c6c0aa3a9546babc2fad3739e964ebb
 
 d7a08882a0a4b4e176691331ee3f492996579534
 
+在`vm-entry`之前, 会调用`vmx_update_hv_timer(vcpu);`
+
+在`vm-entry`之前, 会调用`kvm_wait_lapic_expire(vcpu);`
+
 ## 5.1. preemption timer到期
 
-在`vm-entry`之前, 会调用`vmx_update_hv_timer(vcpu);`
 
 ## 5.2. hrtimer到期的外部中断
 
