--- Auto-Git Commit ---

--- a/Virtualization/3. KVM/6. 虚拟机时钟模拟/4. APIC Timer模拟.md
+++ b/Virtualization/3. KVM/6. 虚拟机时钟模拟/4. APIC Timer模拟.md
@@ -781,20 +781,16 @@ static enum hrtimer_restart apic_timer_fn(struct hrtimer *data)
 
 ```
 cd /sys/kernel/debug/tracing/
-echo nop > /sys/kernel/debug/tracing/current_tracer
-echo > /sys/kernel/debug/tracing/trace
-echo vcpu_enter_guest > set_graph_function
-echo 1 > /sys/kernel/debug/tracing/tracing_on
-echo function_graph > /sys/kernel/debug/tracing/current_tracer
-```
-
-注: 也可以尝试
-
-```
+echo nop > current_tracer
+echo 0 > tracing_on
 echo ':mod:kvm' > set_ftrace_filter
 echo ':mod:kvm_amd' >> set_ftrace_filter
 echo ':mod:kvm_intel' >> set_ftrace_filter
+echo > set_graph_function
+echo > set_ftrace_pid
 echo pvclock_gtod_notify > set_ftrace_notrace
+echo 1 > tracing_on
+echo function_graph > current_tracer
 ```
 
 使用 `kvm-unit-test` 的vmexit中的`tscdeadline`和`tscdeadline_immed`, 当然也可以自己编写`kvm-unit-test`测试
@@ -815,29 +811,7 @@ tscdeadline 13712
 ```
 
 ```cpp
- 65)               |        kvm_set_lapic_tscdeadline_msr [kvm]() {
- 65)               |          __start_apic_timer [kvm]() {
- 65)               |            restart_apic_timer [kvm]() {
- 65)   0.124 us    |              kvm_can_use_hv_timer [kvm]();
- 65)               |              vmx_set_hv_timer [kvm_intel]() {
- 65)   0.128 us    |                kvm_read_l1_tsc [kvm]();
- 65)   0.389 us    |              }
- 65)               |              apic_timer_expired [kvm]() {
- 65)   0.138 us    |                kvm_get_running_vcpu [kvm]();
- 65)               |                kvm_apic_local_deliver [kvm]() {
- 65)               |                  __apic_accept_irq [kvm]() {
- 65)               |                    vmx_deliver_posted_interrupt [kvm_intel]() {
- 65)   0.162 us    |                      kvm_get_running_vcpu [kvm]();
- 65)   0.413 us    |                    }
- 65)   0.713 us    |                  }
- 65)   0.943 us    |                }
- 65)   1.459 us    |              }
- 65)               |              cancel_hv_timer.isra.40 [kvm]() {
- 65)   0.125 us    |                vmx_cancel_hv_timer [kvm_intel]();
- 65)   0.405 us    |              }
- 65)   3.083 us    |            }
- 65)   3.329 us    |          }
- 65)   3.576 us    |        }
+
 ```
 
 可以看到`tscdeadline_immed`是直接
