--- a/Virtualization/3. KVM/6. 虚拟机时钟模拟/4. APIC Timer模拟.md
+++ b/Virtualization/3. KVM/6. 虚拟机时钟模拟/4. APIC Timer模拟.md
@@ -811,7 +811,29 @@ tscdeadline 13712
 ```
 
 ```cpp
-
+ 65)               |        kvm_set_lapic_tscdeadline_msr [kvm]() {
+ 65)               |          __start_apic_timer [kvm]() {
+ 65)               |            restart_apic_timer [kvm]() {
+ 65)   0.124 us    |              kvm_can_use_hv_timer [kvm]();
+ 65)               |              vmx_set_hv_timer [kvm_intel]() {
+ 65)   0.128 us    |                kvm_read_l1_tsc [kvm]();
+ 65)   0.389 us    |              }
+ 65)               |              apic_timer_expired [kvm]() {
+ 65)   0.138 us    |                kvm_get_running_vcpu [kvm]();
+ 65)               |                kvm_apic_local_deliver [kvm]() {
+ 65)               |                  __apic_accept_irq [kvm]() {
+ 65)               |                    vmx_deliver_posted_interrupt [kvm_intel]() {
+ 65)   0.162 us    |                      kvm_get_running_vcpu [kvm]();
+ 65)   0.413 us    |                    }
+ 65)   0.713 us    |                  }
+ 65)   0.943 us    |                }
+ 65)   1.459 us    |              }
+ 65)               |              cancel_hv_timer.isra.40 [kvm]() {
+ 65)   0.125 us    |                vmx_cancel_hv_timer [kvm_intel]();
+ 65)   0.405 us    |              }
+ 65)   3.083 us    |            }
+ 65)   3.329 us    |          }
+ 65)   3.576 us    |        }
 ```
 
 可以看到`tscdeadline_immed`是直接
