--- Auto-Git Commit ---

--- a/Virtualization/3. KVM/6. 虚拟机时钟模拟/4. APIC Timer模拟.md
+++ b/Virtualization/3. KVM/6. 虚拟机时钟模拟/4. APIC Timer模拟.md
@@ -40,6 +40,9 @@
 
 1. 虚拟机设置APIC timer, 主要包括两个, 写TMICT寄存器(用于one-shot/period模式); 写TSCDEADLINE MSR寄存器(用于tscdeadline模式). 从而发生vm-exit, 进入KVM中
 2. 在KVM中, 模拟虚拟机的APIC设置, 先设置这几个寄存器, 然后启用lapic timer定时器(优先使用hv timer`<preemption timer>`, 其次使用hrtimer)作为中断源, 最后进入Guest模式
+
+intel下还有posted interrupt
+
 3. timer到期会发生vm-exit, 进入KVM中
 * preemption timer导致的vm-exit, exit reason就是preemption timer
 * hrtimer到期会产生外部中断, 导致虚拟机vm-exit, 这个exit reason是外部中断?
@@ -48,6 +51,8 @@
 6. KVM中模拟EOI行为后, 进入Guest模式
 
 注: TMICT, Timer Initial Count寄存器
+
+注2: 还有exitless timer情况
 
 下面分析QEMU-KVM模拟APIC Timer**周期触发**(periodic)**模式**中断过程
 
@@ -795,7 +800,33 @@ echo function_graph > current_tracer
 
 使用 `kvm-unit-test` 的vmexit中的`tscdeadline`和`tscdeadline_immed`, 当然也可以自己编写`kvm-unit-test`测试
 
+intel还涉及`preemption timer`
+
 ### 6.1.1. tscdeadline
+
+1. 仅仅打开tscdeadline
+2. 测试有没有preemption timer两种情况的
+
+```diff
+diff --git a/arch/x86/kvm/lapic.c b/arch/x86/kvm/lapic.c
+index 4ce2ddd..4d769ef 100644
+--- a/arch/x86/kvm/lapic.c
++++ b/arch/x86/kvm/lapic.c
+@@ -118,9 +118,12 @@ static bool kvm_can_post_timer_interrupt(struct kvm_vcpu *vcpu)
+
+ bool kvm_can_use_hv_timer(struct kvm_vcpu *vcpu)
+ {
++       return false;
++/*
+        return kvm_x86_ops.set_hv_timer
+               && !(kvm_mwait_in_guest(vcpu->kvm) ||
+                    kvm_can_post_timer_interrupt(vcpu));
++*/
+ }
+ EXPORT_SYMBOL_GPL(kvm_can_use_hv_timer);
+```
+
+
 
 ```
 # taskset -c 65 ./x86-run x86/vmexit.flat
@@ -809,6 +840,17 @@ pci-testdev at 0x10 membar febff000 iobar c000
 tscdeadline 13712
   eoi tscdeadline 294
 ```
+
+两种
+
+
+
+
+
+
+
+
+
 
 ```cpp
  65)               |        kvm_set_lapic_tscdeadline_msr [kvm]() {
@@ -837,6 +879,8 @@ tscdeadline 13712
 ```
 
 可以看到`tscdeadline_immed`是直接
+
+
 
 
 http://chinaunix.net/uid-25739055-id-4092821.html
