--- Auto-Git Commit ---

--- a/Virtualization/3. KVM/6. 虚拟机时钟模拟/4. APIC Timer模拟.md
+++ b/Virtualization/3. KVM/6. 虚拟机时钟模拟/4. APIC Timer模拟.md
@@ -25,6 +25,7 @@
 - [6. trace](#6-trace)
   - [6.1. 使用ftrace](#61-使用ftrace)
     - [6.1.1. tscdeadline](#611-tscdeadline)
+      - [](#)
 
 <!-- /code_chunk_output -->
 
@@ -804,7 +805,10 @@ intel还涉及`preemption timer`
 
 ### 6.1.1. tscdeadline
 
-1. 仅仅打开tscdeadline
+1. 仅仅打开tscdeadline, 将代码修改下, 只执行一次
+
+
+
 2. 测试有没有preemption timer两种情况的
 
 ```diff
@@ -826,7 +830,7 @@ index 4ce2ddd..4d769ef 100644
  EXPORT_SYMBOL_GPL(kvm_can_use_hv_timer);
 ```
 
-
+#### 
 
 ```
 # taskset -c 65 ./x86-run x86/vmexit.flat
