--- Auto-Git Commit ---

--- a/Virtualization/3. KVM/6. 虚拟机时钟模拟/4. APIC Timer模拟.md
+++ b/Virtualization/3. KVM/6. 虚拟机时钟模拟/4. APIC Timer模拟.md
@@ -24,8 +24,9 @@
     - [5.2.1. apic_timer_fn(): hrtimer到期的响应函数](#521-apic_timer_fn-hrtimer到期的响应函数)
 - [6. trace](#6-trace)
   - [6.1. 使用ftrace](#61-使用ftrace)
-    - [6.1.1. tscdeadline](#611-tscdeadline)
-      - [](#)
+    - [6.1.1. tscdeadline_immed](#611-tscdeadline_immed)
+    - [6.1.2. tscdeadline](#612-tscdeadline)
+      - [6.1.2.1.](#6121)
 
 <!-- /code_chunk_output -->
 
@@ -801,12 +802,94 @@ echo function_graph > current_tracer
 
 使用 `kvm-unit-test` 的vmexit中的`tscdeadline`和`tscdeadline_immed`, 当然也可以自己编写`kvm-unit-test`测试
 
-intel还涉及`preemption timer`
+intel还涉及`preemption timer`和posted interrupt
 
-### 6.1.1. tscdeadline
+### 6.1.1. tscdeadline_immed
+
+### 6.1.2. tscdeadline
 
 1. 仅仅打开tscdeadline, 将代码修改下, 只执行一次
 
+```diff
+diff --git a/Makefile b/Makefile
+index 0e21a49..625ed48 100644
+--- a/Makefile
++++ b/Makefile
+@@ -50,7 +50,8 @@ include $(SRCDIR)/$(TEST_DIR)/Makefile
+
+ COMMON_CFLAGS += -g $(autodepend-flags) -fno-strict-aliasing -fno-common
+ COMMON_CFLAGS += -Wall -Wwrite-strings -Wempty-body -Wuninitialized
+-COMMON_CFLAGS += -Wignored-qualifiers -Werror
++#COMMON_CFLAGS += -Wignored-qualifiers -Werror
++COMMON_CFLAGS += -Wignored-qualifiers
+
+ frame-pointer-flag=-f$(if $(KEEP_FRAME_POINTER),no-,)omit-frame-pointer
+ fomit_frame_pointer := $(call cc-option, $(frame-pointer-flag), "")
+diff --git a/x86/run b/x86/run
+index 8b2425f..a56f822 100755
+--- a/x86/run
++++ b/x86/run
+@@ -37,7 +37,8 @@ else
+        pc_testdev="-device testdev,chardev=testlog -chardev file,id=testlog,path=msr.out"
+ fi
+
+-command="${qemu} --no-reboot -nodefaults $pc_testdev -vnc none -serial stdio $pci_testdev"
++#command="${qemu} --no-reboot -nodefaults $pc_testdev -vnc none -serial stdio $pci_testdev"
++command="${qemu} -cpu host,-x2apic --no-reboot -nodefaults $pc_testdev -vnc none -serial stdio $pci_testdev"
+ command+=" -machine accel=$ACCEL -kernel"
+ command="$(timeout_cmd) $command"
+
+diff --git a/x86/vmexit.c b/x86/vmexit.c
+index 47efb63..4cf64a6 100644
+--- a/x86/vmexit.c
++++ b/x86/vmexit.c
+@@ -462,6 +462,7 @@ static void wr_ibpb_msr(void)
+ }
+
+ static struct test tests[] = {
++/*
+        { cpuid_test, "cpuid", .parallel = 1,  },
+        { vmcall, "vmcall", .parallel = 1, },
+ #ifdef __x86_64__
+@@ -474,7 +475,9 @@ static struct test tests[] = {
+        { outl_elcr_kernel, "outl_to_kernel", .parallel = 1 },
+        { mov_dr, "mov_dr", .parallel = 1 },
+        { tscdeadline_immed, "tscdeadline_immed", has_tscdeadline, .parallel = 1, },
++*/
+        { tscdeadline, "tscdeadline", has_tscdeadline, .parallel = 1, },
++/*
+        { self_ipi_sti_nop, "self_ipi_sti_nop", .parallel = 0, },
+        { self_ipi_sti_hlt, "self_ipi_sti_hlt", .parallel = 0, },
+        { self_ipi_tpr, "self_ipi_tpr", .parallel = 0, },
+@@ -496,6 +499,7 @@ static struct test tests[] = {
+        { rd_tsc_adjust_msr, "rd_tsc_adjust_msr", .parallel = 1 },
+        { NULL, "pci-mem", .parallel = 0, .next = pci_mem_next },
+        { NULL, "pci-io", .parallel = 0, .next = pci_io_next },
++*/
+ };
+
+ unsigned iterations;
+@@ -534,7 +538,8 @@ static bool do_test(struct test *test)
+
+        do {
+                tsc_eoi = tsc_ipi = 0;
+-               iterations *= 2;
++               //iterations *= 2;
++               iterations = 1;
+                t1 = rdtsc();
+
+                if (!test->parallel) {
+@@ -544,7 +549,8 @@ static bool do_test(struct test *test)
+                        on_cpus(run_test, func);
+                }
+                t2 = rdtsc();
+-       } while ((t2 - t1) < GOAL);
++       //} while ((t2 - t1) < GOAL);
++       } while (0);
+        printf("%s %d\n", test->name, (int)((t2 - t1) / iterations));
+        if (tsc_ipi)
+                printf("  ipi %s %d\n", test->name, (int)(tsc_ipi / iterations));
+```
 
 
 2. 测试有没有preemption timer两种情况的
@@ -830,7 +913,7 @@ index 4ce2ddd..4d769ef 100644
  EXPORT_SYMBOL_GPL(kvm_can_use_hv_timer);
 ```
 
-#### 
+#### 6.1.2.1. 
 
 ```
 # taskset -c 65 ./x86-run x86/vmexit.flat
