--- Auto-Git Commit ---

--- a/Virtualization/3. KVM/6. 虚拟机时钟模拟/4. APIC Timer模拟.md
+++ b/Virtualization/3. KVM/6. 虚拟机时钟模拟/4. APIC Timer模拟.md
@@ -26,7 +26,7 @@
   - [6.1. 使用ftrace](#61-使用ftrace)
     - [6.1.1. tscdeadline_immed](#611-tscdeadline_immed)
     - [6.1.2. tscdeadline](#612-tscdeadline)
-      - [6.1.2.1.](#6121)
+      - [6.1.2.1. 禁用](#6121-禁用)
 
 <!-- /code_chunk_output -->
 
@@ -676,6 +676,7 @@ static void apic_timer_expired(struct kvm_lapic *apic, bool from_timer_fn)
         }
         // pending加1
         atomic_inc(&apic->lapic_timer.pending);
+        // 设置pending
         kvm_set_pending_timer(vcpu);
 }
 ```
@@ -721,6 +722,16 @@ int kvm_apic_local_deliver(struct kvm_lapic *apic, int lvt_type)
 ```
 
 `kvm_apic_local_deliver()`用于传递中断到lapci相应功能单元，`__apic_accept_irq`函数在`中断虚拟化`有分析
+
+```cpp
+void kvm_set_pending_timer(struct kvm_vcpu *vcpu)
+{
+        // 设置vcpu->requests中的KVM_REQ_PENDING_TIMER位为1
+        kvm_make_request(KVM_REQ_PENDING_TIMER, vcpu);
+        // 唤醒这个vcpu
+        kvm_vcpu_kick(vcpu);
+}
+```
 
 # 5. timer到期
 
@@ -802,7 +813,7 @@ echo function_graph > current_tracer
 
 使用 `kvm-unit-test` 的vmexit中的`tscdeadline`和`tscdeadline_immed`, 当然也可以自己编写`kvm-unit-test`测试
 
-intel还涉及`preemption timer`和posted interrupt
+intel还涉及`preemption timer`和`posted interrupt`
 
 ### 6.1.1. tscdeadline_immed
 
@@ -913,20 +924,9 @@ index 4ce2ddd..4d769ef 100644
  EXPORT_SYMBOL_GPL(kvm_can_use_hv_timer);
 ```
 
-#### 6.1.2.1. 
+#### 6.1.2.1. 禁用
 
-```
-# taskset -c 65 ./x86-run x86/vmexit.flat
-/usr/local/bin/qemu-system-x86_64 -cpu host,+x2apic --no-reboot -nodefaults -device pc-testdev -device isa-debug-exit,iobase=0xf4,iosize=0x4 -vnc none -serial stdio -device pci-testdev -machine accel=kvm -kernel x86/vmexit.flat # -initrd /tmp/tmp.fXRBt9HyKB
-enabling apic
-paging enabled
-cr0 = 80010011
-cr3 = 61e000
-cr4 = 20
-pci-testdev at 0x10 membar febff000 iobar c000
-tscdeadline 13712
-  eoi tscdeadline 294
-```
+
 
 两种
 
