--- Auto-Git Commit ---

--- a/Virtualization/3. KVM/6. 虚拟机时钟模拟/4. APIC Timer模拟.md
+++ b/Virtualization/3. KVM/6. 虚拟机时钟模拟/4. APIC Timer模拟.md
@@ -26,7 +26,9 @@
   - [6.1. 使用ftrace](#61-使用ftrace)
     - [6.1.1. tscdeadline_immed](#611-tscdeadline_immed)
     - [6.1.2. tscdeadline](#612-tscdeadline)
-      - [6.1.2.1. 禁用](#6121-禁用)
+      - [6.1.2.1. Intel禁用preemption timer](#6121-intel禁用preemption-timer)
+      - [Intel启用preemption timer](#intel启用preemption-timer)
+      - [AMD](#amd)
 
 <!-- /code_chunk_output -->
 
@@ -924,7 +926,25 @@ index 4ce2ddd..4d769ef 100644
  EXPORT_SYMBOL_GPL(kvm_can_use_hv_timer);
 ```
 
-#### 6.1.2.1. 禁用
+#### 6.1.2.1. Intel禁用preemption timer
+
+```
+
+```
+
+#### Intel启用preemption timer
+
+```
+
+```
+
+#### AMD
+
+```
+
+```
+
+
 
 
 
