--- Auto-Git Commit ---

--- a/Virtualization/3. KVM/6. 虚拟机时钟模拟/4. APIC Timer模拟.md
+++ b/Virtualization/3. KVM/6. 虚拟机时钟模拟/4. APIC Timer模拟.md
@@ -817,6 +817,8 @@ echo function_graph > current_tracer
 
 intel还涉及`preemption timer`和`posted interrupt`
 
+AMD也有`posted interrupt`, 但是没有`preemption timer`
+
 ### 6.1.1. tscdeadline_immed
 
 ### 6.1.2. tscdeadline
