--- Auto-Git Commit ---

--- a/Virtualization/3. KVM/6. 虚拟机时钟模拟/4. APIC Timer模拟.md
+++ b/Virtualization/3. KVM/6. 虚拟机时钟模拟/4. APIC Timer模拟.md
@@ -28,7 +28,7 @@
     - [6.1.2. tscdeadline](#612-tscdeadline)
       - [6.1.2.1. Intel禁用preemption timer](#6121-intel禁用preemption-timer)
       - [Intel启用preemption timer](#intel启用preemption-timer)
-      - [AMD](#amd)
+      - [AMD启用avic](#amd启用avic)
 
 <!-- /code_chunk_output -->
 
@@ -940,7 +940,7 @@ index 4ce2ddd..4d769ef 100644
 
 ```
 
-#### AMD
+#### AMD启用avic
 
 ```
 
