--- Auto-Git Commit ---

--- a/Virtualization/3. KVM/6. 虚拟机时钟模拟/4. APIC Timer模拟.md
+++ b/Virtualization/3. KVM/6. 虚拟机时钟模拟/4. APIC Timer模拟.md
@@ -29,6 +29,7 @@
       - [6.1.2.1. Intel禁用preemption timer](#6121-intel禁用preemption-timer)
       - [Intel启用preemption timer](#intel启用preemption-timer)
       - [AMD启用avic](#amd启用avic)
+      - [AMD禁用avic](#amd禁用avic)
 
 <!-- /code_chunk_output -->
 
@@ -815,9 +816,10 @@ echo function_graph > current_tracer
 
 使用 `kvm-unit-test` 的vmexit中的`tscdeadline`和`tscdeadline_immed`, 当然也可以自己编写`kvm-unit-test`测试
 
-intel还涉及`preemption timer`和`posted interrupt`
-
-AMD也有`posted interrupt`, 但是没有`preemption timer`
+- intel还涉及`preemption timer`和`posted interrupt`
+        - intel启用/禁用`preemption timer`会有影响
+- AMD也有`posted interrupt`, 但是没有`preemption timer`, 但是AMD有avic
+        - AMD启用/禁用avic影响到apicv, 进而影响posted interrupt
 
 ### 6.1.1. tscdeadline_immed
 
@@ -946,7 +948,7 @@ index 4ce2ddd..4d769ef 100644
 
 ```
 
-
+#### AMD禁用avic
 
 
 
