--- Auto-Git Commit ---

--- a/Linux/Debug/debug/tools/perf/1. perf 简介.md
+++ b/Linux/Debug/debug/tools/perf/1. perf 简介.md
@@ -119,7 +119,9 @@ Perf不但可以分析制定应用程序的性能问题（per thread），也可
 
 总之perf是一款很牛逼的综合性分析工具，大到系统全局性性能，再小到进程线程级别，甚至到函数及汇编级别。
 
-perf利用Linux的**trace特性**，可以用于实时跟踪，统计event计数(perf stat)；或者使用采样(perf record)，报告(perf report|script|annotate)的使用方式进行诊断。perf命令行接口并不能利用所有的Linux trace特性，有些trace需要通过ftrace接口使用。
+perf利用Linux的**trace特性**，可以用于实时跟踪，统计**event计数**(`perf stat`)；或者使用**采样**(perf record)，报告(perf report|script|annotate)的使用方式进行诊断。
+
+perf命令行接口并不能利用所有的Linux trace特性，有些trace需要通过ftrace接口使用。
 
 对于perf和ftrace的使用见 https://github.com/brendangregg/perf-tools
 
