--- Auto-Git Commit ---

--- a/Virtualization/3. KVM/6. 虚拟机时钟模拟/4. APIC Timer模拟.md
+++ b/Virtualization/3. KVM/6. 虚拟机时钟模拟/4. APIC Timer模拟.md
@@ -417,7 +417,9 @@ bool kvm_can_use_hv_timer(struct kvm_vcpu *vcpu)
 
 mwait指令没有透传给虚拟机, 或者不能够post timer interrupt, 这个都不成立, 则表明能够使用hv timer, 为什么???
 
-preemption只有vcpu run才会生效，非透传下虚拟机pause不会vmexit，hlt会
+preemption只有vcpu run才会生效，非透传下虚拟机pause不会vmexit，而hlt会
+
+
 
 2. 设置hv timer, 调用vmx的`vmx_set_hv_timer`, 设置`vmx->hv_deadline_tsc`, 设置失败则直接返回
 
