--- a/Virtualization/Learning/系统虚拟化/第5章 硬件辅助虚拟化/3. CPU虚拟化的实现.md
+++ b/Virtualization/Learning/系统虚拟化/第5章 硬件辅助虚拟化/3. CPU虚拟化的实现.md
@@ -3,31 +3,31 @@
 
 <!-- code_chunk_output -->
 
-- [ 1 VCPU描述符](#1-vcpu描述符)
-- [ 2 VCPU的创建](#2-vcpu的创建)
-  - [ 2.1 VMCS的创建与初始化](#21-vmcs的创建与初始化)
-- [ 3 VCPU的运行](#3-vcpu的运行)
-  - [ 3.1 上下文切换](#31-上下文切换)
-    - [ 3.1.1 上下文切换步骤](#311-上下文切换步骤)
-    - [ 3.1.2 惰性保存/恢复](#312-惰性保存恢复)
-  - [ 3.2 VCPU的硬件优化](#32-vcpu的硬件优化)
-    - [ 3.2.1 读写CR0](#321-读写cr0)
-    - [ 3.2.2 读取TSC](#322-读取tsc)
-    - [ 3.2.3 GDTR/LDTR/IDTR/TR的访问](#323-gdtrldtridtrtr的访问)
-    - [ 3.2.4 读CR2](#324-读cr2)
-    - [ 3.2.5 SYSENTER/SYSEXIT](#325-sysentersysexit)
-    - [ 3.2.6 APIC访问控制](#326-apic访问控制)
-    - [ 3.2.7 异常控制](#327-异常控制)
-    - [ 3.2.8 I/O控制](#328-io控制)
-    - [ 3.2.9 MSR位图](#329-msr位图)
-  - [ 3.3 总结](#33-总结)
-- [ 4 VCPU的退出](#4-vcpu的退出)
-  - [ 4.1 VCPU退出步骤](#41-vcpu退出步骤)
-  - [ 4.2 VCPU退出原因](#42-vcpu退出原因)
-- [ 5 VCPU的再运行](#5-vcpu的再运行)
-- [ 6 进阶](#6-进阶)
-  - [ 6.1 CPU模式的虚拟化](#61-cpu模式的虚拟化)
-  - [ 6.2 多处理器虚拟机](#62-多处理器虚拟机)
+- [1 VCPU描述符](#1-vcpu描述符)
+- [2 VCPU的创建](#2-vcpu的创建)
+  - [2.1 VMCS的创建与初始化](#21-vmcs的创建与初始化)
+- [3 VCPU的运行](#3-vcpu的运行)
+  - [3.1 上下文切换](#31-上下文切换)
+    - [3.1.1 上下文切换步骤](#311-上下文切换步骤)
+    - [3.1.2 惰性保存/恢复](#312-惰性保存恢复)
+  - [3.2 VCPU的硬件优化](#32-vcpu的硬件优化)
+    - [3.2.1 读写CR0](#321-读写cr0)
+    - [3.2.2 读取TSC](#322-读取tsc)
+    - [3.2.3 GDTR/LDTR/IDTR/TR的访问](#323-gdtrldtridtrtr的访问)
+    - [3.2.4 读CR2](#324-读cr2)
+    - [3.2.5 SYSENTER/SYSEXIT](#325-sysentersysexit)
+    - [3.2.6 APIC访问控制](#326-apic访问控制)
+    - [3.2.7 异常控制](#327-异常控制)
+    - [3.2.8 I/O控制](#328-io控制)
+    - [3.2.9 MSR位图](#329-msr位图)
+  - [3.3 总结](#33-总结)
+- [4 VCPU的退出](#4-vcpu的退出)
+  - [4.1 VCPU退出步骤](#41-vcpu退出步骤)
+  - [4.2 VCPU退出原因](#42-vcpu退出原因)
+- [5 VCPU的再运行](#5-vcpu的再运行)
+- [6 进阶](#6-进阶)
+  - [6.1 CPU模式的虚拟化](#61-cpu模式的虚拟化)
+  - [6.2 多处理器虚拟机](#62-多处理器虚拟机)
 
 <!-- /code_chunk_output -->
 
@@ -88,7 +88,7 @@ VCPU描述符包含的内容很多, 通常会被组织成多级结构, 例如第
 
 ⓶ **宿主机状态域**: **VM\-Exit**时, **CPU切换**到**VMM时寄存器值**, 因此, 初始化值参考**VMM运行时的CPU的状态**. **HOST RIP字段**通常被设置为**VMM中VMX Exit处理函数！！！**(VMX Exit Handler)的入口.
 
-⓷ **VM\-Execution控制域**: 控制**VCPU运行时的一些行为**, 如执行**某些敏感指令时是否发生VM\-Exit**. 例如IN/OUT指令, 如果VMM允许客户机**直接访问某些I/O端口**, 那么VMM就会将Use I/O bitmaps位置1, 并在I/O bitmap中将相应I/O端口所对应的位置0, 这样, 客户机访问这些I/O端口就不会发生VM\-Exit. 
+⓷ **VM\-Execution控制域**: 控制**VCPU运行时的一些行为**, 如执行**某些敏感指令时是否发生VM\-Exit**. 例如**IN/OUT指令**, 如果VMM允许客户机**直接访问某些I/O端口**, 那么VMM就会将`Use I/O bitmaps`位置1, 并在`I/O bitmap`中将相应I/O端口所对应的位置0, 这样, 客户机访问这些I/O端口就**不会发生VM\-Exit**. 
 
 ⓸ **VM\-Entry控制域**: 主要在**每次VM\-Entry之前设置**, 因此在**VCPU初始化时不需要特别设置**.
 
