--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/1. 反射异常给guest.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/1. 异常处理/1. 反射异常给guest.md
@@ -1,8 +1,14 @@
 
 
-由于异常而引发`VM-exit`时，`VM- exit interruption information` 字段将记录这个异常的**delivery信息**(参见3.10.2.1节)，并且**有错误码**时，在`VM-exit interruption error code`字段里记录异常的错误码。
+# 两个字段: info和error code
 
-一般情况下， VMM可以直接将`VM-exit interruption information`字段的值复制给`VM-entry interruption information`字段，将`VM-exit interruption error code`字段的值复制给`VM-entry nterruption error code`字段(**存在错误码时**) .
+由于异常而引发`VM-exit`时，
+* `VM-exit interruption information` 字段将记录这个异常的**delivery信息**(参见`3.10.2.1`节)，
+* 并且**有错误码**时，在`VM-exit interruption error code`字段里记录异常的错误码。
+
+一般情况下， VMM可以直接
+* 将`VM-exit interruption information`字段的值复制给`VM-entry interruption information`字段，
+* 将`VM-exit interruption error code`字段的值复制给`VM-entry nterruption error code`字段(**存在错误码时**) .
 
 # 1. 处理NMI unblocking位
 
@@ -14,7 +20,7 @@
 
 # 2. 反射`#DF`异常
 
-当 `IDT-vectring information` 字段的bit 31 (valid位) 为1时，表明这个字段所记录的向量事件并**不直接引发VM-exit**. 而是由于在**异常delivery 期间**遇到某些错误而导致`VM-exit`(参见3.10.3节). 
+当 `IDT-vectoring information` 字段的`bit 31` (valid位) 为1时，表明这个字段所记录的向量事件并**不直接引发VM-exit**. 而是由于在**异常delivery 期间**遇到某些错误而导致`VM-exit`(参见3.10.3节). 
 
 那么 `IDT-vectoring information` 字段记录**原始向量事件**的**delivery信息**, `IDT-vectoring error code`字段记录**原始异常的错误码**.
 
