--- Auto-Git Commit ---

--- a/Virtualization/3. KVM/6. 虚拟机时钟模拟/4. APIC Timer模拟.md
+++ b/Virtualization/3. KVM/6. 虚拟机时钟模拟/4. APIC Timer模拟.md
@@ -545,11 +545,12 @@ static void start_sw_period(struct kvm_lapic *apic)
         // 当前时间晚于 target_expiration
         if (ktime_after(ktime_get(),
                         apic->lapic_timer.target_expiration)) {
+                // 已经过期了, 处理
                 apic_timer_expired(apic, false);
-
+                // oneshot的话, 不用做什么了, 直接返回
                 if (apic_lvtt_oneshot(apic))
                         return;
-
+                // 
                 advance_periodic_target_expiration(apic);
         }
         // 启用hrtimer, 超时时间是apic->lapic_timer.target_expiration
