--- a/Virtualization/3. KVM/6. 虚拟机时钟模拟/4. APIC Timer模拟.md
+++ b/Virtualization/3. KVM/6. 虚拟机时钟模拟/4. APIC Timer模拟.md
@@ -525,11 +525,8 @@ static void start_sw_timer(struct kvm_lapic *apic)
 ```
 
 1. 如果hv timer在使用, 则取消;
-
 2. 对于非周期性但是却存在pending的, 直接返回;
-
 3. 针对周期性或一次性的, 调用`start_sw_period()`;
-
 4. 针对tscdeadline的, 调用`start_sw_tscdeadline()`;
 
 #### 4.5.2.1. start_sw_period(): 周期性或一次性模式
@@ -550,7 +547,7 @@ static void start_sw_period(struct kvm_lapic *apic)
                 // oneshot的话, 不用做什么了, 直接返回
                 if (apic_lvtt_oneshot(apic))
                         return;
-                // 
+                // 周期性的, 设置下个周期的超时时间 target_expiration
                 advance_periodic_target_expiration(apic);
         }
         // 启用hrtimer, 超时时间是apic->lapic_timer.target_expiration
@@ -565,14 +562,9 @@ static void start_sw_period(struct kvm_lapic *apic)
 - 调用`apic_timer_expired()`处理过期, 其中会进行中断注入, 下面详细讲
 - 如果是**一次性的话**, 那就此**结束**, 直接返回
 - 否则(**周期性**)调用`advance_periodic_target_expiration()`设置**下一次的周期性目标过期时间**
-3. 如果没有过期, 则直接启动apic timer的hrtimer, 超时时间是`apic->lapic_timer.target_expiration`(`ktime_get() + deadline`), 
+3. 如果没有过期或者已经过期的进行了处理但是是周期性的, 则启动apic timer的hrtimer, 超时时间是`apic->lapic_timer.target_expiration`(`ktime_get() + deadline`), 
 
 apic timer的hrtimer是在lapic创建时候初始化的, 该hrtimer的中断响应回调函数是`apic_timer_fn()`, 详细见`中断虚拟化`部分
-
-总结: 
-
-- 对于周期性的, 无论如何都会**启用hrtimer**; 
-- 对于一次性的, **已经过期的直接注入一次**, 否则**启用hrtimer**
 
 ```cpp
 // 设置周期性的下一次超时时间
@@ -602,6 +594,11 @@ static void advance_periodic_target_expiration(struct kvm_lapic *apic)
                 nsec_to_cycles(apic->vcpu, delta);
 }
 ```
+
+总结: 
+
+- 对于周期性的, 无论如何都会**启用hrtimer**; 
+- 对于一次性的, **已经过期的直接注入一次**, 否则**启用hrtimer**
 
 #### 4.5.2.2. start_sw_tscdeadline(): tscdeadline模式
 
@@ -648,7 +645,11 @@ static void start_sw_tscdeadline(struct kvm_lapic *apic)
         local_irq_restore(flags);
 }
 ```
+不存在周期性的说法
 
+1. 关闭中断
+2. 
+3. 恢复中断 
 
 ### 4.5.3. apic_timer_expired(): apic timer已经到期处理
 
