--- a/Virtualization/3. KVM/6. 虚拟机时钟模拟/4. APIC Timer模拟.md
+++ b/Virtualization/3. KVM/6. 虚拟机时钟模拟/4. APIC Timer模拟.md
@@ -50,7 +50,7 @@ intel下还有posted interrupt
 
 3. timer到期会发生vm-exit, 进入KVM中
 * preemption timer导致的vm-exit, exit reason就是preemption timer
-* hrtimer到期会产生外部中断, 导致虚拟机vm-exit, 这个exit reason是外部中断?
+* hrtimer到期会产生外部中断, 导致虚拟机vm-exit, 这个exit reason是外部中断
 4. KVM中调用timer处理函数, 注入中断, 进入guest模式
 5. 虚拟机执行时间中断处理函数, 发送EOI, 导致vm-exit
 6. KVM中模拟EOI行为后, 进入Guest模式
