--- Auto-Git Commit ---

--- a/Virtualization/3. KVM/6. 虚拟机时钟模拟/4. APIC Timer模拟.md
+++ b/Virtualization/3. KVM/6. 虚拟机时钟模拟/4. APIC Timer模拟.md
@@ -51,6 +51,7 @@ intel下还有posted interrupt
 3. timer到期会发生vm-exit, 进入KVM中
 * preemption timer导致的vm-exit, exit reason就是preemption timer
 * hrtimer到期会产生外部中断, 导致虚拟机vm-exit, 这个exit reason是外部中断
+到期后处理
 4. KVM中调用timer处理函数, 注入中断, 进入guest模式
 5. 虚拟机执行时间中断处理函数, 发送EOI, 导致vm-exit
 6. KVM中模拟EOI行为后, 进入Guest模式
@@ -722,6 +723,7 @@ int kvm_apic_local_deliver(struct kvm_lapic *apic, int lvt_type)
                 mode = reg & APIC_MODE_MASK;
                 // lvtt的trig_mode
                 trig_mode = reg & APIC_LVT_LEVEL_TRIGGER;
+                // lapic接收中断
                 return __apic_accept_irq(apic, mode, vector, 1, trig_mode,
                                         NULL);
         }
