--- Auto-Git Commit ---

--- a/Virtualization/3. KVM/6. 虚拟机时钟模拟/4. APIC Timer模拟.md
+++ b/Virtualization/3. KVM/6. 虚拟机时钟模拟/4. APIC Timer模拟.md
@@ -17,19 +17,19 @@
     - [4.5.2. start_sw_timer(): 使用sw timer](#452-start_sw_timer-使用sw-timer)
       - [4.5.2.1. start_sw_period(): 周期性或一次性模式](#4521-start_sw_period-周期性或一次性模式)
       - [4.5.2.2. start_sw_tscdeadline(): tscdeadline模式](#4522-start_sw_tscdeadline-tscdeadline模式)
-    - [4.5.3. apic_timer_expired(): apic timer已经到期处理](#453-apic_timer_expired-apic-timer已经到期处理)
 - [5. timer到期](#5-timer到期)
   - [5.1. preemption timer到期](#51-preemption-timer到期)
   - [5.2. hrtimer到期的外部中断](#52-hrtimer到期的外部中断)
     - [5.2.1. apic_timer_fn(): hrtimer到期的响应函数](#521-apic_timer_fn-hrtimer到期的响应函数)
+  - [5.3. apic_timer_expired(): apic timer已经到期处理](#53-apic_timer_expired-apic-timer已经到期处理)
 - [6. trace](#6-trace)
   - [6.1. 使用ftrace](#61-使用ftrace)
     - [6.1.1. tscdeadline_immed](#611-tscdeadline_immed)
     - [6.1.2. tscdeadline](#612-tscdeadline)
       - [6.1.2.1. Intel禁用preemption timer](#6121-intel禁用preemption-timer)
-      - [Intel启用preemption timer](#intel启用preemption-timer)
-      - [AMD启用avic](#amd启用avic)
-      - [AMD禁用avic](#amd禁用avic)
+      - [6.1.2.2. Intel启用preemption timer](#6122-intel启用preemption-timer)
+      - [6.1.2.3. AMD启用avic](#6123-amd启用avic)
+      - [6.1.2.4. AMD禁用avic](#6124-amd禁用avic)
 
 <!-- /code_chunk_output -->
 
@@ -651,7 +651,85 @@ static void start_sw_tscdeadline(struct kvm_lapic *apic)
 2. 
 3. 恢复中断 
 
-### 4.5.3. apic_timer_expired(): apic timer已经到期处理
+# 5. timer到期
+
+步骤三和步骤四
+
+涉及到 “acknowledge interrupt on exit” 机制, 可以参见intel手册关于外部中断部分.
+
+有两个相关commit: 
+
+f2485b3e0c6c0aa3a9546babc2fad3739e964ebb
+
+d7a08882a0a4b4e176691331ee3f492996579534
+
+在`vm-entry`之前, 会调用`vmx_update_hv_timer(vcpu);`
+
+在`vm-entry`之前, 会调用`kvm_wait_lapic_expire(vcpu);`
+
+## 5.1. preemption timer到期
+
+```cpp
+static int handle_preemption_timer(struct kvm_vcpu *vcpu)
+{
+        handle_fastpath_preemption_timer(vcpu);
+        return 1;
+}
+
+static fastpath_t handle_fastpath_preemption_timer(struct kvm_vcpu *vcpu)
+{
+        struct vcpu_vmx *vmx = to_vmx(vcpu);
+
+        if (!vmx->req_immediate_exit &&
+            !unlikely(vmx->loaded_vmcs->hv_timer_soft_disabled)) {
+                kvm_lapic_expired_hv_timer(vcpu);
+                return EXIT_FASTPATH_REENTER_GUEST;
+        }
+
+        return EXIT_FASTPATH_NONE;
+}
+```
+
+## 5.2. hrtimer到期的外部中断
+
+### 5.2.1. apic_timer_fn(): hrtimer到期的响应函数
+
+```cpp
+// hrtimer到期处理函数
+apic_timer_fn()  // hrtimer到期处理函数
+ ├─ apic_timer_expired(apic, false); // 已经到期了
+ |   ├─ set_target_expiration(apic, count_reg); // 
+ ├─ lapic_is_periodic(apic) // 周期性
+ |   ├─ advance_periodic_target_expiration(apic); // 设置周期性的目标过期时间
+ |   ├─ hrtimer_add_expires_ns(&ktimer->timer, ktimer->period); // 修改hrtimer, 以便再次重启使用 
+ |   └─ return HRTIMER_RESTART; // 周期性的, 所以重启hrtimer
+ └─ return HRTIMER_NORESTART; // one-shot/tscdeadline模式, 不重启hrtimer
+```
+hrtimer到期后的响应函数
+
+```cpp
+static enum hrtimer_restart apic_timer_fn(struct hrtimer *data)
+{
+        struct kvm_timer *ktimer = container_of(data, struct kvm_timer, timer);
+        struct kvm_lapic *apic = container_of(ktimer, struct kvm_lapic, lapic_timer);
+        // 到期处理函数
+        apic_timer_expired(apic, true);
+        // 周期性
+        if (lapic_is_periodic(apic)) {
+                // 设置周期性的下一次目标超时时间
+                advance_periodic_target_expiration(apic);
+                // 修改hrtimer
+                hrtimer_add_expires_ns(&ktimer->timer, ktimer->period);
+                // 重启hrtimer
+                return HRTIMER_RESTART;
+        } else
+                // 一次性或tscdeadline, 不重启
+                return HRTIMER_NORESTART;
+}
+```
+
+
+## 5.3. apic_timer_expired(): apic timer已经到期处理
 
 无论hvtimer(preemption timer)还是sw timer, 都可能会调用到
 
@@ -742,64 +820,6 @@ void kvm_set_pending_timer(struct kvm_vcpu *vcpu)
         kvm_vcpu_kick(vcpu);
 }
 ```
-
-# 5. timer到期
-
-步骤三和步骤四
-
-涉及到 “acknowledge interrupt on exit” 机制, 可以参见intel手册关于外部中断部分.
-
-有两个相关commit: 
-
-f2485b3e0c6c0aa3a9546babc2fad3739e964ebb
-
-d7a08882a0a4b4e176691331ee3f492996579534
-
-在`vm-entry`之前, 会调用`vmx_update_hv_timer(vcpu);`
-
-在`vm-entry`之前, 会调用`kvm_wait_lapic_expire(vcpu);`
-
-## 5.1. preemption timer到期
-
-
-## 5.2. hrtimer到期的外部中断
-
-### 5.2.1. apic_timer_fn(): hrtimer到期的响应函数
-
-```cpp
-// hrtimer到期处理函数
-apic_timer_fn()  // hrtimer到期处理函数
- ├─ apic_timer_expired(apic, false); // 已经到期了
- |   ├─ set_target_expiration(apic, count_reg); // 
- ├─ lapic_is_periodic(apic) // 周期性
- |   ├─ advance_periodic_target_expiration(apic); // 设置周期性的目标过期时间
- |   ├─ hrtimer_add_expires_ns(&ktimer->timer, ktimer->period); // 修改hrtimer, 以便再次重启使用 
- |   └─ return HRTIMER_RESTART; // 周期性的, 所以重启hrtimer
- └─ return HRTIMER_NORESTART; // one-shot/tscdeadline模式, 不重启hrtimer
-```
-hrtimer到期后的响应函数
-
-```cpp
-static enum hrtimer_restart apic_timer_fn(struct hrtimer *data)
-{
-        struct kvm_timer *ktimer = container_of(data, struct kvm_timer, timer);
-        struct kvm_lapic *apic = container_of(ktimer, struct kvm_lapic, lapic_timer);
-        // 到期处理函数
-        apic_timer_expired(apic, true);
-        // 周期性
-        if (lapic_is_periodic(apic)) {
-                // 设置周期性的下一次目标超时时间
-                advance_periodic_target_expiration(apic);
-                // 修改hrtimer
-                hrtimer_add_expires_ns(&ktimer->timer, ktimer->period);
-                // 重启hrtimer
-                return HRTIMER_RESTART;
-        } else
-                // 一次性或tscdeadline, 不重启
-                return HRTIMER_NORESTART;
-}
-```
-
 
 
 
@@ -943,19 +963,19 @@ index 4ce2ddd..4d769ef 100644
 
 ```
 
-#### Intel启用preemption timer
+#### 6.1.2.2. Intel启用preemption timer
 
 ```
 
 ```
 
-#### AMD启用avic
+#### 6.1.2.3. AMD启用avic
 
 ```
 
 ```
 
-#### AMD禁用avic
+#### 6.1.2.4. AMD禁用avic
 
 
 
