--- Auto-Git Commit ---

--- a/Virtualization/3. KVM/6. 虚拟机时钟模拟/4. APIC Timer模拟.md
+++ b/Virtualization/3. KVM/6. 虚拟机时钟模拟/4. APIC Timer模拟.md
@@ -848,6 +848,9 @@ echo vcpu_enter_guest > set_graph_function
 echo handle_exit >> set_graph_function
 echo kvm_emulate_wrmsr >> set_graph_function
 echo kvm_set_lapic_tscdeadline_msr >> set_graph_function
+echo kvm_cpu_has_pending_timer >> set_graph_function
+echo kvm_inject_pending_timer_irqs >> set_graph_function
+
 ```
 
 
