--- Auto-Git Commit ---

--- a/Virtualization/3. KVM/6. 虚拟机时钟模拟/4. APIC Timer模拟.md
+++ b/Virtualization/3. KVM/6. 虚拟机时钟模拟/4. APIC Timer模拟.md
@@ -850,7 +850,9 @@ echo kvm_emulate_wrmsr >> set_graph_function
 echo kvm_set_lapic_tscdeadline_msr >> set_graph_function
 echo kvm_cpu_has_pending_timer >> set_graph_function
 echo kvm_inject_pending_timer_irqs >> set_graph_function
-
+echo pvclock_gtod_notify > set_ftrace_notrace
+echo 1 > tracing_on
+echo function_graph > current_tracer
 ```
 
 
