--- Auto-Git Commit ---

--- a/Virtualization/3. KVM/6. 虚拟机时钟模拟/4. APIC Timer模拟.md
+++ b/Virtualization/3. KVM/6. 虚拟机时钟模拟/4. APIC Timer模拟.md
@@ -844,6 +844,12 @@ echo function_graph > current_tracer
 如果效果不明显, 使用下面类似的
 
 ```
+cd /sys/kernel/debug/tracing/
+echo nop > current_tracer
+echo 0 > tracing_on
+echo > set_graph_function
+echo > set_ftrace_pid
+echo > set_ftrace_filter
 echo vcpu_enter_guest > set_graph_function
 echo handle_exit >> set_graph_function
 echo kvm_emulate_wrmsr >> set_graph_function
