--- a/Virtualization/3. KVM/6. 虚拟机时钟模拟/4. APIC Timer模拟.md
+++ b/Virtualization/3. KVM/6. 虚拟机时钟模拟/4. APIC Timer模拟.md
@@ -96,6 +96,13 @@ int kvm_create_lapic(struct kvm_vcpu *vcpu, int timer_advance_ns)
 
 首先创建一个**定时器**，然后初始化**APIC Timer设备**产生**中断的函数**，实际就是定时器回调函数。
 
+
+查看:
+
+```
+/sys/kernel/debug/kvm/97073-19/vcpu3/lapic_timer_advance_ns
+```
+
 # 4. 定时器设置Set APIC Timer
 
 步骤一和步骤二
