--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第3章 VMCS结构/5. VM-execution控制类字段/7. Guest_Host Masks和Read Shadows字段.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第3章 VMCS结构/5. VM-execution控制类字段/7. Guest_Host Masks和Read Shadows字段.md
@@ -1,22 +1,38 @@
 
-有如下两组 guest/host mask 与 read shadow 字段： 
+vm-execution控制类字段包含有如下两组 guest/host mask 与 read shadow 字段： 
 
 (1) **CRO 寄存器**的 guest/host mask 与 read shadow 字段。
 
 (2) **CR4 寄存器**的 guest/host mask 与 read shadow 字段。
 
-这些
+这些控制类字段控制了访问一些寄存器(包括CLTS、LMSW、MOV CR和SMSW)的指令.
 
-这些字段是 `natural-width` 类型的字段，在 64 位架构处理器上是 64 位宽, 否则为 32 位宽。guest/host mask 的每个位有如下两层意义：
+这些字段是 `natural-width` 类型的字段，在 64 位架构处理器上是 64 位宽, 否则为 32 位宽。`guest/host mask` 的每个位有如下两层意义：
 
 (1) 位为 1 时，表示该位权利属于 host 所有。
 
 (2) 位为 0 时，表示该位 guest 有权设置。
 
-位属于 host
+## 位属于 host
 
- guest 读该位时，则返 read shadow 相应位的值。写该位时，如果写入的值不等于  read shadow 相应位的值，则产生 VM-exit。
+guest 读该位时，则返 read shadow 相应位的值。写该位时，如果写入的值不等于  read shadow 相应位的值，则产生 VM-exit。
 
 位 guest 有权设置
 
- guest 读写该位反映在真实的寄存器上，不会产生 VM-exit。当 guest 读该位时，返回
+guest 读写该位反映在真实的寄存器上，不会产生 VM-exit。当 guest 读该位时，返回CRO/CR4寄存器该位的值。写该位时, CRO/CR4寄存器该位的值将被写入。
+
+举个例子来说明位的 host 与 guest 权利。假如 CR4 guest/host mask 为 000021H 值，CR4 read shadow 为 000000H 值，而 CR4 寄存器的值为 0000220H。此时，CR4 寄存器的 bit0, bit5 以及 bit13 属于 host 权利，其余位则 guest 有权利。
+
+```
+mov eax. cr4        ; 返回 0000222h
+mov eax, 2024h      ; bit 2 =1
+mov cr4, eax        ; cr4 被写入 00002024h 值
+mov eax, 2021h
+mov cr4, eax        ; 失败，产生 WM-exit
+```
+
+当读 CR4 寄存器时，将返回 000020h 值。返回值的 bit0, bit5 及 bit13 来自 read  shadow 字段对应的 bit0, bit5 及 bit3, 而 bit9 则来自 CR4 寄存器的 bit9
+
+当向 CR4 寄存器写入 00004h 值时，由于 bit2 属于 guest 有权利，所以 bit2 值能写入 CR4 寄存器。并且 bit0, bit5 及 bit13 的值等于 read shadow 字段对应位的值，所以这个写入是成功的。
+
+当向 CR4 寄存器写入 00002021h 值时，由于 bit0 属于 host 权利，并且写入值的 bit0 不等于 read shadow 字段的 bit0 值，因此，这个写入失败将产生 VM-exit, CR4 寄存器的值不变。
