--- a/Virtualization/Learning/处理器虚拟化技术/第3章 VMCS结构/5. VM-execution控制类字段/7. Guest_Host Masks和Read Shadows字段.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第3章 VMCS结构/5. VM-execution控制类字段/7. Guest_Host Masks和Read Shadows字段.md
@@ -5,9 +5,11 @@ vm-execution控制类字段包含有如下两组 guest/host mask 与 read shadow
 
 (2) **CR4 寄存器**的 guest/host mask 与 read shadow 字段。
 
-这些控制类字段控制了访问一些寄存器(包括CLTS、LMSW、MOV CR和SMSW)的指令.
+这些控制类字段控制了访问一些寄存器的指令(包括CLTS、LMSW、MOV CR和SMSW).
 
-这些字段是 `natural-width` 类型的字段，在 64 位架构处理器上是 64 位宽, 否则为 32 位宽。`guest/host mask` 的每个位有如下两层意义：
+这些字段是 `natural-width` 类型的字段，在 64 位架构处理器上是 64 位宽, 否则为 32 位宽。
+
+`guest/host mask` 的**每个位**有如下两层意义：
 
 (1) 位为 1 时，表示该位权利属于 host 所有。
 
@@ -15,11 +17,15 @@ vm-execution控制类字段包含有如下两组 guest/host mask 与 read shadow
 
 ## 位属于 host
 
-guest 读该位时，则返 read shadow 相应位的值。写该位时，如果写入的值不等于  read shadow 相应位的值，则产生 VM-exit。
+* guest **读该位**时(使用，则返 `read shadow` 相应位的值(不产生vm-exit?)。
 
-位 guest 有权设置
+* **写该位**时，如果写入的值**不等于**  read shadow 相应位的值，则产生 `VM-exit`。
 
-guest 读写该位反映在真实的寄存器上，不会产生 VM-exit。当 guest 读该位时，返回CRO/CR4寄存器该位的值。写该位时, CRO/CR4寄存器该位的值将被写入。
+## 位 guest 有权设置
+
+guest **读写**该位反映在**真实的寄存器**上，**不会产生 VM-exit！！！**。
+* 当 guest **读该位**时，返回**CRO/CR4寄存器**该位的值。
+* **写该位**时, CRO/CR4寄存器该位的值将被写入。
 
 举个例子来说明位的 host 与 guest 权利。假如 CR4 guest/host mask 为 000021H 值，CR4 read shadow 为 000000H 值，而 CR4 寄存器的值为 0000220H。此时，CR4 寄存器的 bit0, bit5 以及 bit13 属于 host 权利，其余位则 guest 有权利。
 
