--- a/Virtualization/Learning/处理器虚拟化技术/第3章 VMCS结构/5. VM-execution控制类字段/7. Guest_Host Masks和Read Shadows字段.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第3章 VMCS结构/5. VM-execution控制类字段/7. Guest_Host Masks和Read Shadows字段.md
@@ -17,9 +17,9 @@ vm-execution控制类字段包含有如下两组 guest/host mask 与 read shadow
 
 ## 位属于 host
 
-* guest **读该位**时(使用，则返 `read shadow` 相应位的值(不产生vm-exit?)。
+* guest **读该位**时(使用MOV from CR 或 SMSW)，则返 `read shadow` 相应位的值(不产生vm-exit?)。
 
-* **写该位**时，如果写入的值**不等于**  read shadow 相应位的值，则产生 `VM-exit`。
+* **写该位**时(使用CLTS, LMSW, 或 MOV to CR)，如果写入的值**不等于**  read shadow 相应位的值，则产生 `VM-exit`。
 
 ## 位 guest 有权设置
 
@@ -27,7 +27,7 @@ guest **读写**该位反映在**真实的寄存器**上，**不会产生 VM-exi
 * 当 guest **读该位**时，返回**CRO/CR4寄存器**该位的值。
 * **写该位**时, CRO/CR4寄存器该位的值将被写入。
 
-举个例子来说明位的 host 与 guest 权利。假如 CR4 guest/host mask 为 000021H 值，CR4 read shadow 为 000000H 值，而 CR4 寄存器的值为 0000220H。此时，CR4 寄存器的 bit0, bit5 以及 bit13 属于 host 权利，其余位则 guest 有权利。
+举个例子来说明位的 host 与 guest 权利。假如 `CR4 guest/host mask` 为 000021H 值，`CR4 read shadow` 为 000000H 值，而 CR4 寄存器的值为 0000220H。此时，CR4 寄存器的 bit0, bit5 以及 bit13 属于 **host 权利**，其余位则 **guest 有权利**。
 
 ```
 mov eax. cr4        ; 返回 0000222h
@@ -37,7 +37,7 @@ mov eax, 2021h
 mov cr4, eax        ; 失败，产生 WM-exit
 ```
 
-当读 CR4 寄存器时，将返回 000020h 值。返回值的 bit0, bit5 及 bit13 来自 read  shadow 字段对应的 bit0, bit5 及 bit3, 而 bit9 则来自 CR4 寄存器的 bit9
+当读 CR4 寄存器时，将返回 000020h 值。返回值的 bit0, bit5 及 bit13 来自 read  shadow 字段对应的 bit0, bit5 及 bit3, 而 bit9 则来自 CR4 寄存器的 bit 9.
 
 当向 CR4 寄存器写入 00004h 值时，由于 bit2 属于 guest 有权利，所以 bit2 值能写入 CR4 寄存器。并且 bit0, bit5 及 bit13 的值等于 read shadow 字段对应位的值，所以这个写入是成功的。
 
