--- Auto-Git Commit ---

--- a/Virtualization/3. KVM/6. 虚拟机时钟模拟/1. 基本原理.md
+++ b/Virtualization/3. KVM/6. 虚拟机时钟模拟/1. 基本原理.md
@@ -32,6 +32,25 @@
 - kvmclock
 - preemption timer
 
+以前提到, APIC Timer的模式APIC定时器包含**3种定时器模式**，
+- 周期触发`periodic`
+- 一次性触发`one-shot`
+- `TSC-Deadline`模式(最新的CPU里面支持)。
+
+代码在`arch/x86/kvm/lapic.c`的`apic_update_lvtt`
+
+查看操作系统的clocksource：
+
+在`/sys/devices/system/clocksource/clocksource0`目录下；
+
+- `available_clocksource`是当前**所有可用**的clocksource；
+
+- `current_clocksource`是当前**正在使用**的clocksource。
+
+clocksource management：
+
+主要逻辑代码在`kernel/time/clocksource.c`中实现
+
 # 2. Time Tick
 
 一个操作系统要跑起来，必须有**Time Tick**，它就像是身体的脉搏。
@@ -46,23 +65,6 @@
 - 对于APIC Timer设备实际就是lapic的一个功能，意思就是通过编程可以触发lapic设备周期产生中断，然后注入到vcpu。
 
 通过上面了解知道两者区别了**APIC Timer**的是**每个cpu**内核都有**一个定时器**，而**PIT是共用的一个**。
-
-以前提到, APIC Timer的模式APIC定时器包含**3种定时器模式**，
-- 周期触发`periodic`
-- 一次性触发`one-shot`
-- `TSC-Deadline`模式(最新的CPU里面支持)。
-
-查看操作系统的clocksource：
-
-在`/sys/devices/system/clocksource/clocksource0`目录下；
-
-- `available_clocksource`是当前**所有可用**的clocksource；
-
-- `current_clocksource`是当前**正在使用**的clocksource。
-
-clocksource management：
-
-主要逻辑代码在`kernel/time/clocksource.c`中实现
 
 # 3. 虚拟化时钟
 
