--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第3章 VMCS结构/5. VM-execution控制类字段/7. Guest_Host Masks和Read Shadows字段.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第3章 VMCS结构/5. VM-execution控制类字段/7. Guest_Host Masks和Read Shadows字段.md
@@ -1,3 +1,4 @@
+# 两组字段
 
 vm-execution控制类字段包含有如下两组 guest/host mask 与 read shadow 字段： 
 
@@ -9,7 +10,7 @@ vm-execution控制类字段包含有如下两组 guest/host mask 与 read shadow
 
 这些字段是 `natural-width` 类型的字段，在 64 位架构处理器上是 64 位宽, 否则为 32 位宽。
 
-`guest/host mask` 的**每个位**有如下两层意义：
+**guest/host mask** 的**每个位**有如下两层意义：
 
 (1) 位为 1 时，表示该位权利属于 host 所有。
 
@@ -27,10 +28,16 @@ guest **读写**该位反映在**真实的寄存器**上，**不会产生 VM-exi
 * 当 guest **读该位**时，返回**CRO/CR4寄存器**该位的值。
 * **写该位**时, CRO/CR4寄存器该位的值将被写入。
 
-举个例子来说明位的 host 与 guest 权利。假如 `CR4 guest/host mask` 为 000021H 值，`CR4 read shadow` 为 000000H 值，而 CR4 寄存器的值为 0000220H。此时，CR4 寄存器的 bit0, bit5 以及 bit13 属于 **host 权利**，其余位则 **guest 有权利**。
+# 例子
+
+举个例子来说明位的 host 与 guest 权利。
+
+假如 `CR4 guest/host mask` 为 000021H 值，`CR4 read shadow` 为 000000H 值，而 CR4 寄存器的值为 0000220H。
+
+此时，CR4 寄存器的 bit0, bit5 以及 bit13 属于 **host 权利**，其余位则 **guest 有权利**。
 
 ```
-mov eax. cr4        ; 返回 0000222h
+mov eax. cr4        ; 返回 0000220h
 mov eax, 2024h      ; bit 2 =1
 mov cr4, eax        ; cr4 被写入 00002024h 值
 mov eax, 2021h
